--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -246,6 +246,14 @@
 }
 
 @media screen and (max-width: 991px) {
+    .section-ptb {
+        padding-top: 6.25rem;
+        padding-bottom: 4.75rem;
+    }
+
+    .section-pb {
+        padding-bottom: 4.75rem;
+    }
 
     /* [ Buttons ] */
     /*================================================== */
@@ -265,6 +273,21 @@
 }
 
 @media screen and (max-width:767px) {
+    .section-ptb {
+        padding-top: 5.875rem;
+        padding-bottom: 4.375rem;
+    }
+
+    .section-pb {
+        padding-bottom: 4.375rem;
+    }
+
+    /* [ Section Title ] */
+    /*================================================== */
+    .section-title h1 {
+        font-size: 2.25rem;
+        margin-bottom: 1rem;
+    }
 
     /* [ Hero Section Style ] */
     /*================================================== */
