--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ File Description: Main css file of the template
     + Header Style
     + Hero Section Style
     + Featured Products Section
+    + Great Tea Section
 ------------------------------------------------------------------*/
 
 /* [ General ] */
@@ -438,6 +439,73 @@ img {
 
 .featured-product-wrap>h4 {
     font-size: 1.5rem;
+    font-weight: 900;
+    margin-bottom: 0.5rem;
+}
+
+/* [ Great Tea Section ] */
+/*================================================== */
+.image-grid {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 24px;
+}
+
+.box {
+    border-radius: 6px;
+}
+
+.box.yellow,
+.box.green {
+    grid-row: span 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box.pink {
+    background: linear-gradient(270deg, #FF0000 0%, #FF8938 100%);
+    opacity: 0.1;
+}
+
+.box.yellow {
+    background: rgba(230, 166, 35, 0.1);
+}
+
+.box.green {
+    background: rgba(87, 118, 57, 0.1);
+}
+
+.box.gray {
+    background: linear-gradient(90deg, #D9D9D9 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.box img {
+    padding: 34px 0;
+}
+
+.great-tea .section-title {
+    max-width: 100%;
+    text-align: left;
+    margin-bottom: 1.75rem;
+}
+
+.great-tea .left-right {
+    margin-left: 2.25rem;
+}
+
+.great-tea-list {
+    max-width: 458px;
+}
+
+.great-tea-list li:not(:last-child) {
+    margin-bottom: 1.313rem;
+}
+
+.great-tea-list li h3 {
+    font-size: 1.25rem;
     font-weight: 900;
     margin-bottom: 0.5rem;
 }
