added testimonial section overlay bg

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -290,6 +290,10 @@
     .testimonial-wrapper {
         margin-top: 3rem;
     }
+
+    .testimonial-inner::before {
+        content: unset;
+    }
 }
 
 @media screen and (max-width:767px) {
